--- a/style.css
+++ b/style.css
@@ -1,1 +1,83 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+html {
+  scroll-behavior: smooth;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  background-color: #EFEFEF;
+}
+
+nav {
+  background-color: #EFEFEF;
+  position: sticky;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  top: 0;
+  padding: 0 50px;
+  box-shadow: 0 5px 50px rgba(0, 0, 0, 0.025);
+}
+
+nav img {
+  width: 60px;
+  height: 60px;
+}
+
+nav ul {
+  display: flex;
+  gap: 40px;
+}
+
+nav button {
+  color: #1E2022;
+  background-color: transparent;
+  padding: 12px 16px;
+  border-radius: 5px;
+  border: 1px solid #5400CF;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+nav button:hover {
+  color: #EFEFEF;
+  background-color: #5400CF;
+}
+
+nav button#menuButton {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  padding: 7px;
+}
+
+a {
+  text-decoration: none;
+  color: #1E2022;
+  transition: color 0.3s ease;
+}
+
+a:hover {
+  color: #5400CF !important;
+}
+
+h5 {
+  font-size: 20px;
+}
+
+li {
+  list-style: none;
+}
+
+/*
+black: #1E2022
+white: #EFEFEF
+purple: #5400CF
+pink: #E000E0
+*/
