--- a/style.css
+++ b/style.css
@@ -106,6 +106,10 @@ li {
   font-size: 46px;
 }
 
+.home hr {
+  margin-top: 10px;
+}
+
 .home .right h3 span {
   color: #5400CF;
 }
@@ -132,6 +136,52 @@ li {
 
 .home .right button:hover {
   background-color: #3a0091;
+}
+
+.about h3,
+.projects .header h3 {
+  font-size: 40px;
+  margin-top: 10px;
+}
+
+.skills {
+  padding: 110px 85px 0;
+  margin-bottom: 900px;
+}
+
+.skills hr {
+  margin-top: 10px;
+}
+
+.skills .skills-items {
+  display: grid;
+  grid-template-columns: repeat(5, 250px);
+  margin-top: 30px;
+  margin-bottom: 50px;
+  grid-gap: 20px;
+}
+
+.skills .skills-items img {
+  background-color: transparent;
+  width: 25px;
+  margin-bottom: 5px;
+}
+
+.skills .skills-items .skill {
+  width: 75%;
+  border-radius: 5px;
+  padding: 12px;
+  border-bottom: 3px solid transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.skills .skills-items .skill:hover {
+  border-color: #5400CF;
+}
+
+.projects .projects-items .project .info h4 {
+  font-size: 18px;
 }
 
 /*
