--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ hr {
 }
 
 .home {
-  padding: 90px 85px;
+  padding: 150px 450px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -154,7 +154,7 @@ hr {
 
 .about {
   background-color: #f0e9fa;
-  padding: 110px 85px;
+  padding: 110px 240px;
 }
 
 .about .about-me h5 span,
@@ -186,7 +186,7 @@ hr {
 }
 
 .skills {
-  padding: 110px 85px;
+  padding: 110px 240px;
 }
 
 .skills .skills-items {
@@ -221,7 +221,7 @@ hr {
 
 .projects {
   background-color: #f0e9fa;
-  padding: 110px 85px;
+  padding: 110px 240px;
 }
 
 .projects .header {
@@ -342,6 +342,10 @@ footer .social-links img:hover[src*="iconLINKEDIN(black)"] {
 }
 
 @media screen and (max-width: 1200px) {
+  .home {
+    padding: 45px 180px;
+  }
+
   .home .right h5 {
     font-size: 18px;
   }
@@ -350,10 +354,18 @@ footer .social-links img:hover[src*="iconLINKEDIN(black)"] {
     font-size: 36px;
   }
 
+  .about {
+    padding: 45px 85px;
+  }
+
   .about .about-me p {
     font-size: 14px;
     line-height: 24px;
     margin-top: 30px;
+  }
+
+  .skills {
+    padding: 45px 85px;
   }
 
   .skills .skills-items {
@@ -366,6 +378,10 @@ footer .social-links img:hover[src*="iconLINKEDIN(black)"] {
     align-items: center;
     gap: 15px;
     font-size: 14px;
+  }
+
+  .projects {
+    padding: 45px 85px;
   }
 
   .projects .projects-items {
