--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@ hr {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
+  transition: all 0.3s ease;
 }
 
 .project {
@@ -243,7 +244,6 @@ hr {
   border-radius: 5px;
   border-bottom: 3px solid transparent;
   box-shadow: 0 5px 32px rgba(0, 0, 0, 0.15);
-  transition: all 0.5s ease;
 }
 
 .project:hover {
@@ -283,7 +283,7 @@ hr {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
 }
 
 .project:hover .info p {
@@ -305,6 +305,24 @@ hr {
   flex-direction: row;
   gap: 10px;
 }
+
+.project ul .tech {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
+}
+
+.project ul .tech .tech-name {
+  display: none;
+  font-weight: bold;
+  font-size: 12px;
+  color: #3c3d3f;
+  transition: all 0.3s ease;
+}
+
+/* .project ul .tech:hover .tech-name {
+  display: block;
+} */
 
 .info-links {
   display: flex;
