--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ hr {
 }
 
 .home {
-  padding: 150px 350px;
+  padding: 250px 350px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -153,12 +153,13 @@ hr {
 
 .about {
   background-color: #f0e9fa;
-  padding: 110px 240px;
+  padding: 220px 240px;
 }
 
 .about-me h5 span,
 .skills h5 span,
-.info h5 span {
+.info h5 span,
+.contact-me h5 span {
   color: #E000E0;
   font-weight: bolder;
 }
@@ -185,33 +186,84 @@ hr {
 }
 
 .skills {
-  padding: 110px 240px;
+  padding: 240px 240px;
 }
 
 .skills-items {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  align-items: center;
+  grid-template-columns: repeat(9, 1fr);
   margin-top: 30px;
   margin-bottom: 50px;
-  grid-gap: 10px;
-}
-
-.skills-items img {
-  width: 25px;
-  margin-bottom: 5px;
+  grid-gap: 12px;
 }
 
 .skill {
-  width: 75%;
-  border-radius: 5px;
-  padding: 12px;
-  border-bottom: 3px solid transparent;
-  cursor: pointer;
-  transition: all 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  height: 140px;
+  width: 140px;
+  font-weight: 600;
+  font-size: larger;
+  border-radius: 15px;
+  padding: 32px;
+  transition: all 0.6s ease;
 }
 
-.skill:hover {
-  border-color: #5400CF;
+#skill_variant_1 {
+  background-color: #9e79d6;
+}
+
+#skill_variant_2 {
+  background-color: #f0e9fa;
+}
+
+.skill svg {
+  display: block;
+}
+
+.skill p {
+  display: none;
+}
+
+#skill_variant_1:hover {
+  background-color: #f0e9fa;
+}
+
+#skill_variant_1:hover p {
+  color: #3a0091;
+}
+
+#skill_variant_2:hover {
+  background-color: #5400CF;
+}
+
+#skill_variant_2:hover p {
+  color: #EFEFEF;
+}
+
+.skill:hover svg {
+  display: none;
+}
+
+.skill:hover p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+}
+
+.skill:hover p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  text-align: center;
 }
 
 .info h4 {
@@ -220,7 +272,7 @@ hr {
 
 .projects {
   background-color: #f0e9fa;
-  padding: 110px 240px;
+  padding: 200px 240px;
 }
 
 .header {
@@ -231,19 +283,40 @@ hr {
   margin-top: 25px;
 }
 
+.projects-slider {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.slider-btn {
+  margin: 4px;
+}
+
+.projects-container {
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+}
+
 .projects-items {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
-  transition: all 0.3s ease;
+  display: flex;
+  margin: 0 6px;
+  transition: transform 0.5s ease-in-out;
 }
 
 .project {
   background-color: #EFEFEF;
+  width: 32.80%;
+  box-sizing: border-box;
+  flex-shrink: 0;
+  margin: 0 4px;
   height: 460px;
   border-radius: 5px;
   border-bottom: 3px solid transparent;
-  box-shadow: 0 5px 32px rgba(0, 0, 0, 0.15);
 }
 
 .project:hover {
@@ -281,46 +354,15 @@ hr {
   line-height: 18px;
   overflow: hidden;
   display: -webkit-box;
+  line-clamp: 3;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   transition: all 0.3s ease;
 }
 
 .project:hover .info p {
+  line-clamp: unset;
   -webkit-line-clamp: unset;
-  display: block;
-}
-
-.project ul {
-  display: none;
-}
-
-.project ul img {
-  width: 15px;
-  height: 15px;
-}
-
-.project:hover ul {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-
-.project ul .tech {
-  display: flex;
-  flex-direction: row;
-  gap: 4px;
-}
-
-.project ul .tech .tech-name {
-  display: none;
-  font-weight: bold;
-  font-size: 12px;
-  color: #3c3d3f;
-  transition: all 0.3s ease;
-}
-
-.project ul .tech:hover .tech-name {
   display: block;
 }
 
@@ -404,10 +446,13 @@ footer {
   content: url('assets/icons/iconLINKEDIN\(purple\).png');
 }
 
-.form-container {
-  background-color: #f0e9fa;
-  min-height: 80vh;
+.contact {
+  background-color: #EFEFEF;
   padding: 110px 240px;
+}
+
+#contact-form {
+  margin: 50px 0;
 }
 
 .first-form-row {
@@ -552,6 +597,10 @@ form button:disabled {
   .projects {
     padding: 45px 85px;
   }
+
+  .project {
+    width: 48%;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -596,15 +645,17 @@ form button:disabled {
     flex-direction: column-reverse;
   }
 
-  .projects-items {
-    grid-template-columns: repeat(1, 1fr);
+  .contact {
+    padding: 45px 85px;
   }
 
   .project {
     height: auto;
+    width: 25%;
   }
 
   .project .info p {
+    line-clamp: unset;
     -webkit-line-clamp: unset;
     display: block;
   }
@@ -612,12 +663,6 @@ form button:disabled {
   .project .info span {
     width: 20%;
     font-size: 10px;
-  }
-
-  .project ul {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
   }
 
   .form-container {
